{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 343,
  "lineage": "2689bfd9-d5bb-4362-a70c-26e5e8bde6a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09425e12aaf72cd66",
            "domain": "vpc",
            "id": "eipalloc-09425e12aaf72cd66",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-240-134-96.us-west-2.compute.amazonaws.com",
            "public_ip": "44.240.134.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip"
            },
            "tags_all": {
              "Name": "nat_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "APP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:256057170649:instance/i-05d90f576fb7a0ccb",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d90f576fb7a0ccb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mec_test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efebf920cd6238e8",
            "private_dns": "ip-10-0-2-211.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ad74806233a251f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f39d0dfad74f7d68",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e49105171029f39c"
            ]
          },
          "dependencies": [
            "aws_key_pair.mec_ssh_key",
            "aws_security_group.allow_ssh_3000",
            "aws_subnet.private_1",
            "aws_vpc.ITI",
            "tls_private_key.mec_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "APP-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:256057170649:instance/i-017715c1d26dbeea9",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017715c1d26dbeea9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mec_test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0766589599ae046c0",
            "private_dns": "ip-10-0-3-74.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05240d45838d03fec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b359cc1a8f66958f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e49105171029f39c"
            ]
          },
          "dependencies": [
            "aws_key_pair.mec_ssh_key",
            "aws_security_group.allow_ssh_3000",
            "aws_subnet.private_2",
            "aws_vpc.ITI",
            "tls_private_key.mec_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:256057170649:instance/i-077810bef21f7b55e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077810bef21f7b55e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mec_test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e83d3f4361e89937",
            "private_dns": "ip-10-0-0-18.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.18",
            "public_ip": "34.222.150.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079605aa24983ede5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04778724d4bdf920b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0202f8d9c3d28ea18"
            ]
          },
          "dependencies": [
            "aws_key_pair.mec_ssh_key",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_1",
            "aws_vpc.ITI",
            "tls_private_key.mec_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:256057170649:instance/i-08159816ce583741a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08159816ce583741a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mec_test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03297c22c28bb46b7",
            "private_dns": "ip-10-0-1-28.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_ip": "35.92.83.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02953656ae646e520",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bcb4385e7f83463",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0202f8d9c3d28ea18"
            ]
          },
          "dependencies": [
            "aws_key_pair.mec_ssh_key",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_2",
            "aws_vpc.ITI",
            "tls_private_key.mec_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:internet-gateway/igw-01327f7b377075c78",
            "id": "igw-01327f7b377075c78",
            "owner_id": "256057170649",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09425e12aaf72cd66",
            "association_id": "eipassoc-0d99aa63d8fe60c18",
            "connectivity_type": "public",
            "id": "nat-08c79c43733d0b9cb",
            "network_interface_id": "eni-0677429f91bfbecf2",
            "private_ip": "10.0.0.112",
            "public_ip": "44.240.134.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04778724d4bdf920b",
            "tags": {
              "Name": "mec_nat_gatway"
            },
            "tags_all": {
              "Name": "mec_nat_gatway"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.public_1",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa8aca67659f6ec01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08c79c43733d0b9cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa8aca67659f6ec0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.mec",
            "aws_route_table.rout_private",
            "aws_subnet.public_1",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01327f7b377075c78",
            "id": "r-rtb-0fe2b8f3d637cad5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe2b8f3d637cad5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rout_public",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rout_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:route-table/rtb-0fa8aca67659f6ec0",
            "id": "rtb-0fa8aca67659f6ec0",
            "owner_id": "256057170649",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mec_private_rt"
            },
            "tags_all": {
              "Name": "mec_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rout_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:route-table/rtb-0fe2b8f3d637cad5b",
            "id": "rtb-0fe2b8f3d637cad5b",
            "owner_id": "256057170649",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mec_public_rt"
            },
            "tags_all": {
              "Name": "mec_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c247372cdf2d034e",
            "route_table_id": "rtb-0fa8aca67659f6ec0",
            "subnet_id": "subnet-0f39d0dfad74f7d68"
          },
          "dependencies": [
            "aws_route_table.rout_private",
            "aws_subnet.private_1",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c247372cdf2d034e",
            "route_table_id": "rtb-0fa8aca67659f6ec0",
            "subnet_id": "subnet-0f39d0dfad74f7d68"
          },
          "dependencies": [
            "aws_route_table.rout_private",
            "aws_subnet.private_1",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2bce8ff5a48d8cc",
            "route_table_id": "rtb-0fe2b8f3d637cad5b",
            "subnet_id": "subnet-04778724d4bdf920b"
          },
          "dependencies": [
            "aws_route_table.rout_public",
            "aws_subnet.public_1",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093119f8e029cb892",
            "route_table_id": "rtb-0fe2b8f3d637cad5b",
            "subnet_id": "subnet-09bcb4385e7f83463"
          },
          "dependencies": [
            "aws_route_table.rout_public",
            "aws_subnet.public_2",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:security-group/sg-0202f8d9c3d28ea18",
            "description": "Allow ssh inbound traffic and ",
            "egress": [],
            "id": "sg-0202f8d9c3d28ea18",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "256057170649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:security-group/sg-0e49105171029f39c",
            "description": "Allow ssh and port 3000 inbound traffic and ",
            "egress": [],
            "id": "sg-0e49105171029f39c",
            "ingress": [],
            "name": "allow_ssh_3000",
            "name_prefix": "",
            "owner_id": "256057170649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:subnet/subnet-0f39d0dfad74f7d68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f39d0dfad74f7d68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256057170649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet"
            },
            "tags_all": {
              "name": "private_subnet"
            },
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:subnet/subnet-0b359cc1a8f66958f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b359cc1a8f66958f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256057170649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet"
            },
            "tags_all": {
              "name": "private_subnet"
            },
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:subnet/subnet-04778724d4bdf920b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04778724d4bdf920b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256057170649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet"
            },
            "tags_all": {
              "name": "public_subnet"
            },
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:subnet/subnet-09bcb4385e7f83463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcb4385e7f83463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256057170649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet"
            },
            "tags_all": {
              "name": "public_subnet"
            },
            "vpc_id": "vpc-0b44c514ebcecc051"
          },
          "dependencies": [
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ITI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:vpc/vpc-0b44c514ebcecc051",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1d717fc43fbc400",
            "default_route_table_id": "rtb-0728fbb5ec3bf85a7",
            "default_security_group_id": "sg-04441477039de1a5c",
            "dhcp_options_id": "dopt-0c091d9ebd2087313",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b44c514ebcecc051",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0728fbb5ec3bf85a7",
            "owner_id": "256057170649",
            "tags": {
              "name": "ITI"
            },
            "tags_all": {
              "name": "ITI"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_3000_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:security-group-rule/sgr-09ae18d83a0a047ab",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-09ae18d83a0a047ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e49105171029f39c",
            "security_group_rule_id": "sgr-09ae18d83a0a047ab",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_3000",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:security-group-rule/sgr-02dd9283908ed01cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02dd9283908ed01cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0202f8d9c3d28ea18",
            "security_group_rule_id": "sgr-02dd9283908ed01cc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.ITI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:256057170649:security-group-rule/sgr-0d0aab929ba7d0bbc",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d0aab929ba7d0bbc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e49105171029f39c",
            "security_group_rule_id": "sgr-0d0aab929ba7d0bbc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_3000",
            "aws_vpc.ITI"
          ]
        }
      ]
    }
  ]
}